# aicli

./: .gitignore  README.md  ]  data.db  main.py  pyproject.toml
aicli/: __init__.py  action.py  application.py  curs.py  markdown.py  observable.py  settings.py
cli_bot/: application.py
